--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,15 @@
 #
 
 # Name of your site (displayed in the header)
-name: Hassin
+name: Hassin's Workspace
 
 # Short bio or description (displayed in the header)
-description: Firmware & Web Developer building IoT solutions 
+description: Firmware, Embedded Systems, Linux , IoT 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+# avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+# avatar: images/myAvatar.png
+avatar: https://1.gravatar.com/avatar/4713057bedbb5278a33859b2a110c8ff?s=400&d=mm
 #
 # Flags below are optional
 #
@@ -21,12 +22,12 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: hassin23ayz
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: ayz3mbedded
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
