linkedin and email added

--- a/_config.yml
+++ b/_config.yml
@@ -19,12 +19,12 @@ avatar: https://1.gravatar.com/avatar/4713057bedbb5278a33859b2a110c8ff?s=400&d=m
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: aaayz@yahoo.com
   facebook:
   flickr:
   github: hassin23ayz
   instagram:
-  linkedin:
+  linkedin: hassin-ayaz-34ab3470
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: ayz3mbedded
