--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ footer-links:
   flickr:
   github: hassin23ayz
   instagram:
-  linkedin: hassin-ayaz-34ab3470
+  linkedin: hassin-ashfaque-34ab3470
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: ayz3mbedded
